--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li class="item"> <a href="https://www.youtube.com/watch?v=idU-bx2x1a8" target="_blank" rel="external">Vídeos</a> </li>
                     <li class="item"> <a href="https://www.jogos360.com.br/marvel/" target="_blank" rel="external"> Jogos</a></li>
                     <li class="item"> <a href="https://www.omelete.com.br/marvel-cinema/calendario-marvel-studios-2022-2023" target="_blank" rel="external">Novidades</a></li>
+                    <li> Filmes </li>
                     <!-- <li><i class="fab fa-facebook"></i></li>
                 <li><i class="fa fa-car"></i></li> -->
                 </ul>
